--- a/styles/main.css
+++ b/styles/main.css
@@ -120,7 +120,7 @@ button{
     color: #fff;
     border: 1px solid rgb(88, 87, 87);
     padding: 10px;
-   
+    text-transform: uppercase;
 }
   
   
